# cell-selective-ligands

./: .gitignore  .jenkinsfile  README.md  citations.tsv  common.yaml  genFigures.py  makefile  manuscript.docx  manuscript.html  manuscript.md  pyproject.toml  references.json  requirements.txt  variables.json
.github/workflows/: autopep8.yml  build.yml  coveragerc  pytest.yml  testing.yml
manuscript/: 00.front-matter.md  01.abstract.md  01_introduction.md  02.introduction.md  03.results.md  03_results.md  04.discussion.md  05.methods.md  06.supplement.md  16.acknowledge.md  17.author_contrib.md  metadata.yaml  sage-vancouver.csl
select/figures/: figure3.py  figure4.py
selecv/: csizmar.py  imports.py  model.py  multispecific.py  sampling.py
selecv/data/: csizmar_2b.csv  csizmar_2c.csv  csizmar_s4a.csv  csizmar_s4b.csv  final_receptor_levels.csv
selecv/figures/: figure1.py  figure11.py  figure12.py  figure13.py  figure14.py  figure2.py  figure3.py  figure4.py  figure5.py  figure6.py  figure7.py  figure8.py  figure9.py  figureA.py  figureA1.py  figureA2.py  figureA3.py  figureA4.py  figureAnim.py  figureCSIZ.py  figureCommon.py  figureO1.py  figureO2.py  figureS1.py  figureS2.py  figureS3.py  figureS4.py
selecv/tests/: test_polyc.py  test_sigmaPts.py
