[tool.poetry]
name = "selecv"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "1.21"
valentbind = {git = "https://github.com/meyer-lab/valentBind.git", rev = "v0.1.0"}
matplotlib = "^3.4.3"
scikit-learn = "^1.0"
scipy = "^1.7"
seaborn = "^0.11.1"
svgutils = "^0.3"

[tool.poetry.dev-dependencies]
pytest-cov = "^3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]                                                           
fbuild = "selecv.figures.figureCommon:genFigure"
